multiple conversations for npc's.